<resources>
        <string name="app_name">ENVISION</string>
        <string name="hint_email">Email</string>
        <string name="hint_password_login">Password</string>
        <string name="hint_password_signup">Password (at least 6 characters!)</string>
        <string name="action_login">Login</string>
        <string name="action_sign_up">Sign Up</string>
        <string name="error_fields_required">Please enter username and password</string>
        <string name="login_successful">Login successful</string>
        <string name="authentication_failed">Authentication failed.</string>
        <string name="registration_successful">Registration successful</string>
        <string name="registration_failed">Registration failed.</string>
        <string name="hint_confirm_password">Confirm Password</string>
        <string name="error_password_mismatch">Passwords do not match</string>
        <string name="home_title">Home</string>
        <string name="post_title">Post</string>
        <string name="userprofile_title">Profile</string>
        <string name="username_text">Username</string>
        <string name="admin_button_text">Admin</string>
        <string name="logout_button_text">Logout</string>
        <string name ="remove_account_text">Remove Account</string>
        <string name = "posts_management_text">Posts Management</string>
        <string name = "users_management_text">Users Management</string>
        <string name = "settings_text">Settings</string>
        <string name = "settings_ChangePP">Change Profile Picture</string>
        <string name = "settings_ChangePD">Change Profile Description</string>
        <string name= "firestore_error">Firestore error</string>
        <string name= "file_selected">File Selected: </string>
    <string name="upload_profile_pic_below">Upload Profile Pic Below</string>
    <string name="change_description_below_150_chars">Change Description Below (150 chars)</string>
    <string name="enter_description_here">Enter description here...</string>
        <string name="submit">Submit</string>
    <string name="delete_selected_posts">Delete Selected Posts</string>
        <string name="make_user_admin">Make User Admin</string>
        <string name="delete_user">Delete User</string>



</resources>
