<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ChangeProfilePictureActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/changeDTextView"
        android:layout_width="500dp"
        android:layout_height="45dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="0dp"
        android:text="@string/change_description_below_150_chars"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/descriptionTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="150"
        android:hint="@string/enter_description_here"
        android:layout_below="@id/changeDTextView"
        android:layout_marginTop="0dp"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionTextInput"
        android:layout_marginTop="20dp"
        android:text="@string/submit" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation_menu" />

</RelativeLayout>

